testsuite/escript/errors/errors008-var-same-name-as-user-function.src
// reported in https://forums.polserver.com/viewtopic.php?f=54&t=6140
function xyz()
endfunction

if (1)
    var xyz := 3;
    print( xyz );
endif
