testsuite/escript/errors/errors008-var-same-name-as-user-function.err
errors008-var-same-name-as-user-function.src:6:9: error: Cannot define a variable with the same name as function 'xyz'.